# remote_planning_poker

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  justfile
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml  deploy.yml
api/: Cargo.toml
api/src/: main.rs
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: app.rs  main.rs
frontend/src/components/: allowed_vote_button.rs  allowed_votes.rs  approved.rs  backlog.rs  backlog_stories.rs  backlog_story_entry.rs  button.rs  casted_vote_entry.rs  connection_indicator.rs  connection_provider.rs  estimated_stories.rs  estimated_story_entry.rs  form_input.rs  form_textarea.rs  icons.rs  layout.rs  login.rs  mod.rs  nickname_input.rs  player_entry.rs  players.rs  selected_story_entry.rs  story_form.rs  user_provider.rs  vote_value.rs  voting.rs
frontend/src/pages/: home.rs  mod.rs  page_not_found.rs  poker_game.rs
frontend/src/services/: websocket.rs
