[workspace]
members = ["backend", "common", "frontend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.66.0"

[workspace.dependencies]
indexmap = { version = "1.9.2", features = ["serde"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
