[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.5.16", features = ["ws", "headers"] }
axum-auth = "0.3.0"
axum-extra = { version = "0.3.7", features = ["spa"] }
common = { path = "../common" }
futures = "0.3.24"
serde_json = { workspace = true }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs", "trace", "cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { workspace = true }
