[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
axum = { version = "0.5.17", features = ["ws", "headers"] }
axum-auth = "0.3.0"
axum-extra = { version = "0.3.7", features = ["spa"] }
common = { path = "../common" }
futures = "0.3.25"
serde_json = { workspace = true }
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { workspace = true }
