[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
axum = { version = "0.6.18", features = ["headers", "ws"] }
axum-auth = "0.4.0"
axum-extra = "0.7.4"
common = { path = "../common" }
futures = "0.3.28"
serde_json = { workspace = true }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { workspace = true }
