[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
derive_more = { version = "0.99.16", default-features = false, features = ["display"] }
indexmap = { version = "1.8.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0.0", features = ["serde", "v4", "js"] }
