[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
indexmap = { workspace = true }
serde = { version = "1.0.145", features = ["derive"] }
uuid = { workspace = true, features = ["js"] }
