[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
common = { path = "../common" }
indexmap = { version = "1.9.1", features = ["serde"] }
gloo-storage = "0.2.2"
gloo-net = "0.2.4"
log = "0.4.17"
serde_json = "1.0.85"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
