[package]
name = "frontend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
common = { path = "../common" }
gloo-net = "0.2.6"
gloo-storage = "0.2.2"
indexmap = { workspace = true }
log = "0.4.17"
serde_json = { workspace = true }
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
wee_alloc = "0.4.5"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
