[package]
name = "frontend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
common = { path = "../common" }
gloo-net = "0.3.0"
gloo-storage = "0.2.2"
indexmap = { workspace = true }
log = "0.4.19"
serde_json = { workspace = true }
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
wee_alloc = "0.4.5"
yew = "0.20.0"
yew-hooks = "0.2.0"
yew-router = "0.17.0"
